fix(article): link color on dark mode

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -191,5 +191,5 @@ button:disabled {
   @apply list-decimal list-inside mb-4 pl-4;
 }
 .prose a {
-  @apply text-blue-600 hover:underline;
+  @apply text-blue-600 hover:underline dark:text-blue-400;
 }
